content/docs/0.8.x/reference/cli/commands/keptn_send_event_approval.finished.md
---
date: "2021-05-20T14:24:25+02:00"
title: "keptn send event approval.finished"
slug: keptn_send_event_approval.finished
---
## keptn send event approval.finished

Sends an approval.finished event to Keptn in order to confirm an open approval with the specified ID in the provided project and stage

### Synopsis

Sends an approval.finished event to Keptn in order to confirm an open approval with the specified ID in the provided project and stage. 

* This command takes the project (*--project*) and stage (*--stage*). 
* It is optional to specify the ID (*--id*) of the corresponding approval.triggered event. If the ID is not provided, the command asks the user which open approval should be accepted or declined.
* The open approval.triggered events and their ID can be retrieved using the "keptn get event approval.triggered --project=<project> --stage=<stage>" command.


```
keptn send event approval.finished [flags]
```

### Examples

```
keptn send event approval.finished --project=sockshop --stage=hardening --id=1234-5678-9123
```

### Options

```
      --id string               The ID of the approval.triggered event to be approved
  -l, --labels stringToString   Additional labels to be provided for the service that is to be approved (default [])
      --project string          The project containing the service to be approved
      --service string          The service to be approved
      --stage string            The stage containing the service to be approved
```

### Options inherited from parent commands

```
  -h, --help               help
      --mock               Disables communication to a Keptn endpoint
  -n, --namespace string   Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet              Suppresses debug and info messages
  -v, --verbose            Enables verbose logging to print debug messages
  -y, --yes                Assume yes for all user prompts
```

### SEE ALSO

* [keptn send event](../keptn_send_event/)	 - Sends an event to Keptn

###### Auto generated by spf13/cobra on 20-May-2021
